# Mustaff

./: .gitignore  OneRepublic - Apologize.json  README.md  README_CN.md  Test - Message In A Bottle.csv  build_exe.py  entry_cli.py  entry_gui.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
examples/: sample_usage.py
mustaff/: __init__.py  analyzer.py  cli.py  colors.py  mapper.py  preview.py
mustaff/exporters/: __init__.py  base.py  csv_exporter.py  json_exporter.py  osu_mania.py
mustaff/gui/: app.py  preview_player.py
mustaff/importers/: __init__.py  csv_importer.py  json_importer.py  osu_importer.py
output/: Test - Message In A Bottle.json  Test - Message In A Bottle.osu
tests/: test_basic.py
